@@ -4,6 +4,8 @@ asm DisableExitPrompt "8d45??c745??00009643"; //DisableExitPrompt option patch
 
 asm LeaderboardGoalPatch "83be????????01b807000000"; //LeaderboardGoalPatch
 
+asm HideModdedCharacterByAchievement "80b8????????0075??83b8????????0075??8b08"; //PatchModdedCharacterHiddenByAchievementInMenu
+
 // TakeDamage callbacks
 asm TakeDmg_PreEntityCallback "e8????????84c00f84????????8d4c24??e8????????f30f1045";
 asm TakeDmg_PostEntityCallback "0186????????5f5eb0015b8be55dc21400";  // Sig is 6 bytes before patch location due to proximity to end of function.
