@@ -82,6 +82,8 @@ Additions:
 		Tainted boolean defaults to current menu if unspecified.
 * Players.xml
 	- Added support for modded/text trinkets on the "trinket" param (I forgot trinkets existed tbh, lol)
+	- Added "hideachievement" attribute, which hides the character from the character select menu until the corresponding achievement is obtained
+		(Doesn't do anything for tainted characters, since whether or not they appear on the menu is entirely dependant on the non-tainted character)
 * ModCallbacks:
 	- MC_PRE_PLAYER_POCKET_ITEMS_SWAP(EntityPlayer player)
 		Triggers when the player swaps their pocket items using the action drop button (even if they are empty).
